Updated banner, text, pages

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,11 @@ a:visited {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    transition: 0.2s;
+}
+
+.nav-logo:hover {
+    opacity: 0.8;
 }
 
 .nav-ul {
@@ -144,7 +149,7 @@ a:visited {
     display: none;
 }
 
-@media all and (max-width: 700px) {
+@media all and (max-width: 900px) {
     .nav-logo-div {
         width: 100% !important;
     }
@@ -175,7 +180,7 @@ a:visited {
 /* BANNER */
 .banner-container {
     width: 100%;
-    height: 85vh;
+    height: 90vh;
 }
 
 .banner-content-div {
@@ -188,17 +193,24 @@ a:visited {
 .banner-title-div {
     position: absolute;
     max-width: 90%;
-    bottom: 30%;
+    bottom: 40%;
     left: 5%;
     transform: translate(0, 50%);
 }
 
 .banner-title-div button {
-    margin: 20px 10px 20px 0;
+    margin: 40px 10px 20px 0;
 }
 
 .banner-title-div button:last-of-type {
     margin: 20px 0 20px 10px;
+}
+
+.banner-logo {
+    height: 100px;
+    margin-bottom: 40px;
+    -webkit-filter: drop-shadow(var(--default-shadow));
+    filter: drop-shadow(var(--default-shadow));
 }
 
 .banner-main-title {
@@ -206,6 +218,7 @@ a:visited {
     margin: 0 0 10px;
     color: white;
     font-size: 4rem;
+    font-weight: bold;
     text-shadow: 0px 0px 5px rgb(0 0 0 / 50%);
 }
 
@@ -217,16 +230,8 @@ a:visited {
     text-shadow: 0px 0px 5px rgb(0 0 0 / 50%);
 }
 
-.banner-title-div-2 {
-    position: absolute;
-    width: 100%;
-    height: calc(85vh - 60px);
-    background: radial-gradient(circle, rgba(223,166,111,0.7) 0%, rgba(223,166,111,0.8) 35%, rgba(200,139,80,0.9) 100%);
-    box-shadow: inset 0 -5px 5px -4px rgb(0 0 0 / 50%);
-}
-
 .banner-gradient-div {
-    height: calc(85vh - 60px);
+    height: calc(90vh - 60px);
     width: 100%;
     position: absolute;
     top: 0;
@@ -245,107 +250,38 @@ a:visited {
     height: 100%;
 }
 
-#banner-carousel h1 {
-    position: absolute;
-    width: 40%;
-    text-align: right;
-    right: 5%;
-    top: 50%;
-    transform: translateY(-50%);
-    font-weight: bold;
-    font-size: 3em;
-    text-shadow: 0px 0px 6px rgb(0 0 0 / 50%);
-    z-index: 5;
-    color: white;
-}
-
 .carousel-item {
     background-repeat: no-repeat;
     background-position: center; 
     background-size: cover;
 }
 
-.carousel-indicators li {
-    cursor: pointer;
+@media all and (max-width: 900px) {
+    .banner-container {
+        height: 100vh;
+    }
+
+    .banner-gradient-div {
+        height: calc(100vh - 60px) !important;
+    }
+
+    .banner-main-title {
+        font-size: 3rem !important;
+        text-align: center !important;
+    }
+
+    .banner-subtitle {
+        font-size: 1.5rem !important;
+        text-align: center !important;
+    }
+
+    .banner-title-div {
+        text-align: center;
+    }
+
 }
 
-.carousel-indicators li:hover:not(.active) {
-    background-color: white;
-    opacity: 0.75;
-}
-
-#banner-txt-div-container {
-    position: absolute;
-    z-index: 2;
-    width: 100%;
-    height: calc(85vh - 60px);
-}
-
-.banner-txt-div {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background: linear-gradient(90deg, rgba(200,139,80,1) 0%, rgba(238,184,133,0.75) 40%, rgba(255,255,255,0.25) 50%);
-    box-shadow: inset 0 -5px 5px -4px rgb(0 0 0 / 50%);
-}
-
-#banner-txt-div-shadow {
-    position: absolute;
-    content: "";
-    /* background: linear-gradient(62deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.5) 69%, rgba(0,0,0,0) 71%, rgba(0,0,0,0) 100%); */
-    background: rgba(0, 0, 0, 0.5);
-    width: 100%;
-    height: 100%;
-    left: 5px;
-    top: 0;
-    clip-path: polygon(0 0, 60% 0, 100% 100%, 0% 100%);
-}
-
-#banner-wordmark {
-    width: 30%;
-    margin: 0 5%;
-    top: 50%;
-    transform: translateY(-50%);
-    position: absolute;
-    z-index: 4;
-}
-
-#banner-symbol {
-    width: 30%;
-    margin: 0 5%;
-    top: 50%;
-    transform: translateY(-40%);
-    position: absolute;
-    z-index: 3;
-}
-
-#banner-wordmark-2 {
-    width: 30%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -65%);
-    position: absolute;
-    z-index: 4;
-}
-
-#banner-symbol-2 {
-    width: 30%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -65%);
-    position: absolute;
-    z-index: 3;
-}
-
-.banner-main-title-2 {
-    position: absolute;
-    color: white;
-    font-weight: bold;
-    width: 100%;
-    bottom: 10%;
-    text-shadow: 0 0 5px rgb(0 0 0 / 50%);
-}
-
+/*
 @media all and (max-width: 900px) {
     .banner-container {
         height: 100vh;
@@ -387,7 +323,7 @@ a:visited {
         top: auto !important;
         transform: none !important;
     }
-}
+} */
 
 /* MAIN CONTENT SECTIONS */
 .main-content-div {
@@ -597,8 +533,8 @@ p {
 }
 
 .charities-container {
-    row-gap: 2.5rem;
-    column-gap: 1.5rem;
+    row-gap: 1.2rem;
+    column-gap: 1.2rem;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -606,11 +542,20 @@ p {
     justify-content: center;
 }
 
-.charities-container img {
-    max-height: 100px;
-    max-width: 80vw;
-    min-width: 43px;
+.charities-container div {
     margin: 0;
+    width: 120px;
+    height: 120px;
+    position: relative;
+}
+
+.charities-container div img {
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .charities-container p {
@@ -768,4 +713,12 @@ p {
 
 .footer-ul li a:hover {
     color: white;
+}
+
+/* ERROR PAGE */
+#error-div {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
 }
